force-app/main/default/objects/InteractionHistory__c/InteractionHistory__c.object-meta.xml
<CustomObject>
    <label>Interaction History</label>
    <nameField>
        <displayFormat>IH{0}</displayFormat>
        <label>InteractionHistory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interaction History</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>