force-app/main/default/objects/InteractionHistory__c/fields/AccountProfile__c.field-meta.xml
<CustomField>
    <fullName>AccountProfile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Profile</label>
    <referenceTo>AccountProfile__c</referenceTo>
    <relationshipLabel>Interaction History</relationshipLabel>
    <relationshipName>Interaction_History</relationshipName>
    <type>Lookup</type>
</CustomField>