force-app/main/default/objects/InteractionHistory__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Interaction History</relationshipLabel>
    <relationshipName>Interaction_History</relationshipName>
    <type>Lookup</type>
</CustomField>