force-app/main/default/objects/InteractionHistory__c/fields/DealerContact__c.field-meta.xml
<CustomField>
    <fullName>DealerContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Dealer Contact</relationshipLabel>
    <relationshipName>Interaction_History</relationshipName>
    <type>Lookup</type>
</CustomField>