force-app/main/default/objects/InteractionHistory__c/fields/InteractionData__c.field-meta.xml
<CustomField>
    <fullName>InteractionData__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Interaction Data</label>
    <length>40000</length>
    <type>LongTextArea</type>
</CustomField>