force-app/main/default/objects/InteractionHistory__c/fields/InteractionName__c.field-meta.xml
<CustomField>
    <fullName>InteractionName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Interaction Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>