force-app/main/default/objects/InteractionHistory__c/fields/InteractionRecipientType__c.field-meta.xml
<CustomField>
    <fullName>InteractionRecipientType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Interaction Recipient Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>