force-app/main/default/objects/InteractionHistory__c/fields/InteractionType__c.field-meta.xml
<CustomField>
    <fullName>InteractionType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Interaction Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>