force-app/main/default/objects/InteractionHistory__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Interaction History</relationshipLabel>
    <relationshipName>Interaction_History</relationshipName>
    <type>Lookup</type>
</CustomField>