force-app/main/default/objects/InteractionHistory__c/fields/ReferenceId__c.field-meta.xml
<CustomField>
    <fullName>ReferenceId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Reference Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>