force-app/main/default/objects/InteractionHistory__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vehicle</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Interaction History</relationshipLabel>
    <relationshipName>Interaction_History</relationshipName>
    <type>Lookup</type>
</CustomField>