force-app/main/default/objects/InteractionHistory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Order__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>InteractionType__c</columns>
    <columns>InteractionRecipientType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>